--- a/WebAppExamples/7.3 CSS Flag Project/index.html
+++ b/WebAppExamples/7.3 CSS Flag Project/index.html
@@ -6,19 +6,37 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
+
+    p {
+      margin: 0;
+      font-size: 5rem;
+      text-align: center;
+    }
+
+    /* Red Rectangle */
     .flag {
-      background-color: red;
+      background-color: #ce1126;
       height: 600px;
       width: 900px;
     }
 
-    .flag div {
-      background-color: blue;
-      position: static;
-      top: 150px;
+    .flag p {
+      color: white;
+      position: relative;
+      top: 10px
     }
 
-    .flag div div {
+    /* Blue Rectangle */
+    .flag > div {
+      background-color: #002868;
+      position: absolute;
+      top: 150px;
+      height: 300px;
+      width: 900px;
+    }
+
+    /* White Circle */
+    .flag > div > div {
       background-color: white;
       height: 200px;
       width: 200px;
@@ -26,6 +44,10 @@
       position: relative;
       top: 50px;
       left: 350px;
+    }
+
+    .flag div div p {
+      color: black;
     }
     
   </style>
