--- a/WebAppExamples/10.3 Mondrian Project/index.html
+++ b/WebAppExamples/10.3 Mondrian Project/index.html
@@ -19,11 +19,85 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
+
+    .body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      display: grid;
+      width: 748px;
+      height: 748px;
+      gap: 9px;
+      background-color: #000;
+      grid-template-columns: 320px 198px 153px 50px;
+      grid-template-rows: 414px 130px 155px 22px;
+    }
+
+    .red {
+      background-color: #E72F24;
+    }
+
+    .big {
+      background-color: #F0F1EC;
+      grid-column: span 3;
+    }
+
+    .one {
+      background-color: #F0F1EC;
+      grid-row: span 2;
+    }
+
+    .two{
+      background-color: #F0F1EC;
+      grid-column: span 2;
+      grid-row: span 2;
+    }
+
+    .blue {
+      background-color: #004592;
+      border-bottom: 10px solid;
+      border-color: #000;
+    }
+
+    .three {
+      background-color: #F0F1EC;
+      grid-row: span 2;
+    }
+
+    .four {
+      background-color: #F0F1EC;
+    }
+
+    .yellow {
+      background-color: #F9D01E;
+    }
+
+    .black {
+      background-color: #232629;
+    }
+
   </style>
 </head>
 
 <body>
   <!-- Write your HTML here -->
+  <div class="container">
+    <div class="red box"></div>
+    <div class="big box"></div>
+    <div class="one box"></div>
+    <div class="two box"></div>
+    <div class="blue box"></div>
+    <div class="three box"></div>
+    <div class="four box"></div>
+    <div class="yellow box"></div>
+    <div class="black box"></div>
+  </div>
 </body>
 
 </html>
